# STM32JoyUSBHost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32G030XX_FLASH.ld  STM32JoyUSBHost.ioc  fetch_MCU_Packages.cmake
Core/Inc/: device_wrapper.h  usb_conf.h  usb_def_config.inc
Core/Src/: UsbDataEncoding.s  Usb_signal_receive.s  Usb_signal_transfer_timing.s  device_wrapper.c  main.c  usb_crc.s  usb_util.s
cmake/stm32cubemx/: CMakeLists.txt
libs/usb_low_level/: CMakeLists.txt
libs/usb_low_level/inc/: usb_conf.h  usb_def_config.inc
libs/usb_low_level/src/: Usb_signal_transfer_timing.S  usb_util.S
